start script added

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "zugoinet",
   "version": "1.0.0",
   "description": "App social de comparacion de precios",
-  "main": "src/index.js",
+  "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/app.js"
   },
   "repository": {
     "type": "git",
